// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledAfter fails when given a first mock has not been called 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[]</>
Received second mock with invocationCallOrder:
  <red>[]</>"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after second mock 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[19]</>
Received second mock with invocationCallOrder:
  <red>[18]</>"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after several calls to second mock 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[26, 27, 28]</>
Received second mock with invocationCallOrder:
  <red>[25]</>"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock is called before multiple calls to second mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to have been called after, invocationCallOrder:
  <green>[6, 8]</>
Received second mock with invocationCallOrder:
  <red>[7, 9, 10]</>"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to have been called after, invocationCallOrder:
  <green>[1]</>
Received second mock with invocationCallOrder:
  <red>[]</>"
`;

exports[`.toHaveBeenCalledAfter fails when given first value is not a jest spy or mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Matcher error: <red>\\"received\\"</> must be a mock or spy function

Received:
  function: <red>[Function mock1]</>"
`;

exports[`.toHaveBeenCalledAfter fails when given second mock is called after first mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Expected first mock to have been called after, invocationCallOrder:
  <green>[4000]</>
Received second mock with invocationCallOrder:
  <red>[5000]</>"
`;

exports[`.toHaveBeenCalledAfter fails when given second value is not a jest spy or mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Matcher error: <green>\\"expected\\"</> must be a mock or spy function

Expected:
  function: <green>[Function mock2]</>"
`;
